@@ -1,3 +1,12 @@
+2007-12-17  Dan Williams  <dcbw@redhat.com>
+
+	Patch from Jaap A. Haitsma <jaap@haitsma.org>
+
+	* src/applet.c
+		- (nma_about_cb, about_dialog_handle_email_cb,
+		   about_dialog_handle_url_cb, nma_constructor): set default window
+			icon, make email links clickable, set website label (gnome.org #503831)
+
 2007-12-14  Dan Williams  <dcbw@redhat.com>
 
 	* src/vpn-properties/nm-vpn-properties.c
